--- a/app/src/main/res/layout/item_picture.xml
+++ b/app/src/main/res/layout/item_picture.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="result"
+            type="com.example.imagerecycler.model.PictureModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,10 +23,25 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tv_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/tv_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:text="textview"
+            app:layout_constraintEnd_toEndOf="@+id/iv_picture"
+            app:layout_constraintStart_toStartOf="@+id/iv_picture"
+            app:layout_constraintTop_toBottomOf="@+id/iv_picture" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
