이미지 크기 맞추기

--- a/app/src/main/res/layout/item_group_picture.xml
+++ b/app/src/main/res/layout/item_group_picture.xml
@@ -22,6 +22,7 @@
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/picture_group_recycler"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,12 +30,11 @@
             android:id="@+id/picture_group_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_date"
+            tools:listitem="@layout/item_picture"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
